src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an agreement</description>
    <fields>
        <fullName>APTPS_Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Line_Item_Count__c</fullName>
        <label>Adjustment Line Item Count</label>
        <summaryFilterItems>
            <field>Apttus_CMConfig__AgreementAdjustmentLineItem__c.APTS_Discount_Type__c</field>
            <operation>equals</operation>
            <value>Manual</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_CMConfig__AgreementAdjustmentLineItem__c.Apttus_CMConfig__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Type_Translated__c</fullName>
        <label>Adjustment Type Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_All_in_Service_Cost_Price__c</fullName>
        <label>All-in Service Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Change_type__c</fullName>
        <label>Asset Change type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Physical Conversion</fullName>
                </value>
                <value>
                    <fullName>Physical Conversion</fullName>
                </value>
                <value>
                    <fullName>Physical Movement</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Non-Physical movement</fullName>
                    <isActive>false</isActive>
                    <label>Non-Physical movement</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Average_Service_Cost_Price__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Average Service Cost Price</label>
        <referenceTo>APTS_AverageServiceCostPrice__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Extended_Price_2_decimals__c</fullName>
        <label>Base Extended Price – 2 decimals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Basic_Service_Cost_Price__c</fullName>
        <label>Basic Service Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Ingredients_and_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Party (Ingredients)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Bill to Party (Ingredients))</relationshipLabel>
        <relationshipName>Agreement_Line_Items6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Machines_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill to Party (Machines &amp; Services)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Bill to Party (Machines &amp; Services))</relationshipLabel>
        <relationshipName>Agreement_Line_Items7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bill to Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Bill to Party)</relationshipLabel>
        <relationshipName>Agreement_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bundle_Option__c</fullName>
        <formula>IF((Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Option&quot;))&amp;&amp;
   (Apttus_CMConfig__ClassificationId__r.APTS_CategoryHierarchyOfferingExtId__c == &quot;0702&quot;),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Bundle Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Buying_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Buying Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Buying Group)</relationshipLabel>
        <relationshipName>Agreement_Line_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Call_Out_Coverage_Percent__c</fullName>
        <formula>Apttus_CMConfig__AttributeValueId__r.APTS_Call_Out_Coverage_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call Out Coverage Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Label__c</fullName>
        <description>Label of the category</description>
        <label>Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Level__c</fullName>
        <description>Category level field for CER implementation</description>
        <label>Category Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Category_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Caterer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Caterer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Caterer)</relationshipLabel>
        <relationshipName>Agreement_Line_Items4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Charge_Type_Translated__c</fullName>
        <label>Charge Type Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Comfort_Operating_Cost_Price__c</fullName>
        <label>Comfort Operating Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationFileURL__c</fullName>
        <label>Configuration File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationManualAgreementsURL__c</fullName>
        <label>Configuration Manual &amp; Agreements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_Consumer_Price__c</fullName>
        <label>Consumer Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Consumption_Category__c</fullName>
        <formula>IF(AND(ISPICKVAL(Apttus_CMConfig__LineType__c, &quot;Option&quot;), Apttus_CMConfig__HasOptions__c = FALSE, Apttus_CMConfig__OptionId__r.APTS_Option_Group_Indicator__c = &quot;06&quot;, Apttus_CMConfig__OptionId__r.APTS_Material_Type__c = &quot;ZCBB&quot;),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consumption Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Contact_Cust_Before_Delivery_Trans__c</fullName>
        <label>Contact Cust Before Delivery Trans</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contact_Customer_Before_Delivery__c</fullName>
        <description>Contact Customer Before Delivery- Needed for subscription Orders</description>
        <label>Contact Customer Before Delivery</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConversionId__c</fullName>
        <externalId>true</externalId>
        <label>Conversion Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Call_Out_Coverage__c</fullName>
        <label>Cumulative Call Out Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Labour_coverage__c</fullName>
        <label>Cumulative Labour coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Spare_Parts_Coverage__c</fullName>
        <label>Cumulative Spare Parts Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Deal_Guidance__c</fullName>
        <label>Deal Guidance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Depreciation_Cost__c</fullName>
        <label>Depreciation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Discount1__c</fullName>
        <formula>(Apttus__ListPrice__c *  Apttus__Quantity__c) -  Apttus__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Discount__c</fullName>
        <formula>((Apttus__ListPrice__c -  Apttus__NetPrice__c )/(Apttus__ListPrice__c))*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_per_Uom__c</fullName>
        <formula>APTS_Discount1__c  /  Apttus__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount per Uom</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Category_Discount_Amount__c</fullName>
        <label>Expected Category Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_Cost_2_decimals__c</fullName>
        <label>Extended Cost – 2 decimals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_cost__c</fullName>
        <label>Extended cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Full_Operating_Cost_Price__c</fullName>
        <label>Full Operating Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Global_linkage_ID__c</fullName>
        <label>Global linkage ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Guidance_Icon__c</fullName>
        <formula>CASE(Apttus_CMConfig__Guidance__c,
&apos;Green&apos;, IMAGE(&quot;/resource/GreenTrafficLight&quot;, &quot;Green&quot;),
&apos;Orange&apos;, IMAGE(&quot;/resource/YellowTrafficLight&quot;, &quot;Orange&quot;),
&apos;Red&apos;, IMAGE(&quot;/resource/RedTrafficLight&quot;, &quot;Red&quot;),
&apos;Not Applicable&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guidance Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Bundle__c</fullName>
        <formula>IF(Apttus_CMConfig__ClassificationId__r.APTS_CategoryHierarchyOfferingExtId__c == &quot;0702&quot;,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Option_Product_Family__c</fullName>
        <formula>IF( APTS_Bundle_Option__c == true,   TEXT(Apttus_CMConfig__OptionId__r.APTS_Product_Family2__c) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Option Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Standalone__c</fullName>
        <formula>IF(OR((Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Product/Service&quot;)
   &amp;&amp;(CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Coffee&quot;)
	  ||CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Tea&quot;)
      ||CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Customer Specific Products&quot;)
	 )),(Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL( Apttus_CMConfig__LineType__c , &quot;Product/Service&quot;)&amp;&amp;  ISBLANK( APTS_Option_Group_Text__c ) &amp;&amp; CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Single Serve&quot;))),
True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ingredient Standalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ingredient_Standalone_or_Spare_Part__c</fullName>
        <description>This formula field will indicate if the product on this agreement Line Item is a Standalone Coffee, Standalone Tea Product or a Standalone Spare Part Product.</description>
        <formula>IF((Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Product/Service&quot;)) &amp;&amp;(BEGINS(Apttus__ProductId__r.APTS_Sales_Catalog__c, &apos;01&apos;) ||  BEGINS(Apttus__ProductId__r.APTS_Sales_Catalog__c, &apos;02&apos;) || BEGINS(Apttus__ProductId__r.APTS_Sales_Catalog__c, &apos;03&apos;)|| BEGINS(Apttus__ProductId__r.APTS_Sales_Catalog__c, &apos;06&apos;)), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This formula field will indicate if the product on this agreement Line Item is a Standalone Coffee, Standalone Tea Product or a Standalone Spare Part Product. No user input required</inlineHelpText>
        <label>Ingredient Standalone or Spare Part</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Not_Rollup_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Not Rollup Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>JDE Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (JDE Company)</relationshipLabel>
        <relationshipName>Agreement_Line_Items5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Labour_coverage_Percent__c</fullName>
        <formula>Apttus_CMConfig__AttributeValueId__r.APTS_Labour_Coverage_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour coverage Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Last_Processed_for_Subscription__c</fullName>
        <description>field will determine when Subscription Order was created for an Agreement Line Item. This will help us to skip Agreement Line Items already processed for that particular frequency</description>
        <label>Last Processed for Subscription</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_LineItemExtId__c</fullName>
        <label>Line Item External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_MachineCoffeeKitchen__c</fullName>
        <formula>IF(BEGINS(Apttus_CMConfig__ClassificationHierarchy__c, &apos;Machines&apos;) ||  BEGINS(Apttus_CMConfig__ClassificationHierarchy__c, &apos;Concepts | Coffee Kitchen&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine/Coffee Kitchen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Bundle__c</fullName>
        <formula>IF(((Apttus_CMConfig__HasOptions__c == false &amp;&amp;  ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Option&quot;)) 
			&amp;&amp;  ((CONTAINS(APTS_Option_Group_Text__c,&quot;Technical Service&quot;) 
											|| CONTAINS(APTS_Option_Group_Text__c,&quot;Response Time&quot;) 
										 || CONTAINS(APTS_Option_Group_Text__c,&quot;Service Window&quot;) 
										 || CONTAINS(APTS_Option_Group_Text__c,&quot;Preventive Maintenance&quot;)
										 || CONTAINS(APTS_Option_Group_Text__c,&quot;Value Added Service&quot;)
										  || CONTAINS(APTS_Option_Group_Text__c,&quot;Connected Coffee Service&quot;)
										  || CONTAINS(APTS_Option_Group_Text__c,&quot;Machine Care&quot;)
										  || CONTAINS(APTS_Option_Group_Text__c,&quot;Value Added Machine Care&quot;)
										  || CONTAINS(APTS_Option_Group_Text__c,&quot;Installation Service&quot;)  
										  || CONTAINS(APTS_Option_Group_Text__c,&quot;Conversion Service&quot;)))
										),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Machine Bundle Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Type_Description__c</fullName>
        <description>Populate Description field if Line Type is Product/Service</description>
        <formula>IF(  ISPICKVAL(Apttus_CMConfig__LineType__c, &apos;Product/Service&apos;)  ,  Apttus__Description__c , &apos;&apos;)</formula>
        <label>Machine Type Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Merchant__c</fullName>
        <formula>Text(Apttus_CMConfig__AttributeValueId__r.APTS_Merchant__c)</formula>
        <label>Merchant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_More_Standalone__c</fullName>
        <formula>IF((Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Product/Service&quot;)) 
&amp;&amp;(CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;More&quot;)), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&amp; More Standalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Adjustment_Amount_2_decimals__c</fullName>
        <label>Net Adjustment Amount – 2 decimals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Inc_taxes__c</fullName>
        <label>Net Price(Inc. taxes)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Number_of_Weeks__c</fullName>
        <formula>Apttus_CMConfig__AttributeValueId__r.APTS_Number_of_weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Period – Number of Weeks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Group_Text__c</fullName>
        <label>Option Group Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Product_Code__c</fullName>
        <formula>Apttus_CMConfig__OptionId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Option Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Product_Name__c</fullName>
        <label>Option Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_LSP_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order LSP Detail</label>
        <referenceTo>APTS_Order_LSP_Details__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_ParentBundle__c</fullName>
        <formula>IF(ISPICKVAL(Apttus_CMConfig__LineType__c , &apos;Option&apos;), Apttus_CMConfig__ProductOptionId__r.Apttus_Config2__ParentProductId__r.Name,  Apttus__ProductId__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Bundle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Option_Group__c</fullName>
        <formula>Apttus_CMConfig__DerivedFromId__r.Apttus_Config2__ProductOptionId__r.Apttus_Config2__ProductOptionGroupId__r.Apttus_Config2__ParentOptionGroupId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Option Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PayerIngredients__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Ingredients</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Payer Ingredients)</relationshipLabel>
        <relationshipName>Agreement_Line_Items8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_PayerMachinesServices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Machines &amp; Services</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Payer Machines &amp; Services)</relationshipLabel>
        <relationshipName>Agreement_Line_Items9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Payer)</relationshipLabel>
        <relationshipName>Agreement_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>APTS_Payment_Method__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Physical_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Per_UOM__c</fullName>
        <formula>Apttus__NetPrice__c /  Apttus__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Per UOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_PricingDate__c</fullName>
        <description>Pricing Date used for deal calculation.</description>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Frequency_Translated__c</fullName>
        <label>Pricing Frequency Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Category__c</fullName>
        <description>Contains Category from Category Hierarchy field</description>
        <formula>If(CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c, &quot;|&quot;), 
Left(Apttus_CMConfig__ClassificationHierarchy__c,FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)-1) 
,Apttus_CMConfig__ClassificationHierarchy__c)</formula>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <formula>Apttus__ProductId__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_SubCategory__c</fullName>
        <description>Contains Sub Category from Category Hierarchy</description>
        <formula>If(CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c, &quot;|&quot;), 
If(CONTAINS(Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)),&quot;|&quot;),Left(Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)),FIND(&quot;|&quot;,Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)))-1) ,Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)) ),&quot;&quot;)</formula>
        <label>Product SubCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_SubSubCategory__c</fullName>
        <description>Contains Sub sub Category from Category Hierarchy</description>
        <formula>If(CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c, &quot;|&quot;), 
If(CONTAINS(Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)),&quot;|&quot;),Right(Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)),LEN(Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)))-FIND(&quot;|&quot;,Right(Apttus_CMConfig__ClassificationHierarchy__c,LEN(Apttus_CMConfig__ClassificationHierarchy__c)-FIND(&quot;|&quot;,Apttus_CMConfig__ClassificationHierarchy__c)))) ,&quot;&quot; ),&quot;&quot;)</formula>
        <label>Product SubSubCategory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Purchase_Value__c</fullName>
        <formula>Apttus_CMConfig__AttributeValueId__r.APTS_Purchase_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchase Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Refurbished__c</fullName>
        <formula>Text(Apttus_CMConfig__AttributeValueId__r.APTS_Refurbished__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refurbished?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Org__c</fullName>
        <formula>TEXT(Apttus_CMConfig__PriceListId__r.APTS_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Seasonal_Contract__c</fullName>
        <formula>Text(Apttus_CMConfig__AttributeValueId__r.APTS_Seasonal_Contract__c)</formula>
        <label>Seasonal Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Selling_Uom_Translated__c</fullName>
        <label>Selling Uom Translated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number2__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number__c</fullName>
        <formula>IF(NOT(ISBLANK(APTS_Serial_Number2__c)), APTS_Serial_Number2__c, Apttus_CMConfig__AssetLineItemId__r.APTS_Serial_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Product__c</fullName>
        <formula>IF(((Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Option&quot;)) 
&amp;&amp; ((CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Machines&quot;) 
|| CONTAINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Coffee Kitchen&quot;)))),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Services_Standalone__c</fullName>
        <formula>IF((Apttus_CMConfig__HasOptions__c == false &amp;&amp; ISPICKVAL(Apttus_CMConfig__LineType__c,&quot;Product/Service&quot;)) 
   &amp;&amp;( BEGINS(Apttus_CMConfig__ClassificationHierarchy__c,&quot;Services&quot;)), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services Standalone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_to_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship to Party</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreement Line Items (Ship to Party)</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sold_to_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold to Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Sold to Party)</relationshipLabel>
        <relationshipName>Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_Parts_Coverage_Percent__c</fullName>
        <formula>Apttus_CMConfig__AttributeValueId__r.APTS_Spare_Parts_Coverage_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spare Parts Coverage Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>To be removed</fullName>
                </value>
                <value>
                    <fullName>Adjusted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub Category value from Classification Hierarchy</description>
        <label>Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Agreement Line Items (Sub Category)</relationshipLabel>
        <relationshipName>Sub_Category_Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category_Label__c</fullName>
        <description>Label of the sub sub category</description>
        <label>Sub Sub Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sub Sub Category value from Classification Hierarchy</description>
        <label>Sub Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Agreement Line Items (Sub Sub Category)</relationshipLabel>
        <relationshipName>Sub_Sub_Category_Agreement_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Monthly_fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Displays sum of total recurring lines on primary lines only 
(this field will be blank on : Options , Standalone and Roll up Lines)</description>
        <inlineHelpText>Displays sum of total recurring lines on primary lines only 
(this field will be blank on : Options , Standalone and Roll up Lines)</inlineHelpText>
        <label>Total Monthly fee</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Price__c</fullName>
        <formula>Apttus__NetPrice__c  *  Apttus__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>